--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,9 @@
         android:theme="@style/Theme.PSP"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".ut01.ex01.presentation.Ut01Ex01Activity"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,6 +23,13 @@
             </intent-filter>
 
             <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
+                        <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
